<?xml version="1.0"?>
<package format="3">
  <name>eren_bot_camera</name>
  <version>0.0.0</version>
  <description>ROS2 package for hand tracking with camera using OpenCV and Mediapipe</description>
  <maintainer email="eren@todo.todo">eren</maintainer>
  <license>Apache-2.0</license> <!-- Lisans seçimini özelleştirebilirsin -->

  <!-- ROS 2 Dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>ament_cmake</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <!-- System Dependencies -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>mediapipe</exec_depend>
  <exec_depend>numpy</exec_depend> <!-- Mediapipe genellikle numpy kullanır -->
  <exec_depend>setuptools</exec_depend>

  <!-- Test Dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Export build type for Python -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
